--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+html, body{
+  height: 100%;
+}
+
 .container {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 70%;
 }
 
 .myProgress {
